--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,1 +1,16 @@
-<p>servers works!</p>
+<form #serverForm ="ngForm" (ngSubmit)="addServer(serverForm)">
+  <label>Sever Name: </label>
+  <input type="text" name="serverName" [(ngModel)]="serverName" >
+
+  <label>Sever Id: </label>
+  <input type="text" name="serverId" [(ngModel)]="serverId" >
+
+  <label>Sever Status: </label>
+  <input type="text" name="serverStatus" [(ngModel)]="serverStatus" >
+
+  <button type="submit" class="btn btn-primary">Add Server</button>
+</form>
+
+<ul>
+  <li *ngFor="let server of servers">{{ server.serverName}} {{server.serverId}} {{server.serverStatus}} </li>
+</ul>
